Added the method web order status changed for the rqueue message publishing

--- a/src/main/resources/templates/mail/specialMail.html
+++ b/src/main/resources/templates/mail/specialMail.html
@@ -193,7 +193,7 @@
 																									sans-serif;
 																								color: rgb(0, 0, 0);
 																							"
-																					>Hej <span th:text="${firstName}"></span>,&nbsp;<br /><br />Vi vill
+																							>Hej,&nbsp;<br /><br />Vi vill
 																							informera dig att vi har
 																							uppdaterat våra
 																							<a
